# BachelorThesis

Simulation/: simple_marker.world
Simulation/Astar/: astar.cpp  astar.h  main.cpp
Simulation/MDP/: main.cpp
Simulation/RRT/: RRT.pro  main.cpp  mainwindow.cpp
Simulation/catkin_ws/devel/: setup.sh
Simulation/catkin_ws/devel/include/window_node/: WinDetMsg.h
Simulation/catkin_ws/devel/lib/aruco_generator/: generate
Simulation/catkin_ws/devel/lib/bebop2_command_controller/: bebop_controller
Simulation/catkin_ws/devel/lib/camera_publisher/: cam
Simulation/catkin_ws/devel/lib/image_listener/: listen
Simulation/catkin_ws/devel/lib/pkgconfig/: aruco_generator.pc  bebop2_command_controller.pc  camera_publisher.pc  image_listener.pc  send_velocity.pc  state_estimator.pc  talker.pc  trajectory.pc
Simulation/catkin_ws/devel/lib/ptp_motion_switching_controller/: switching_controller
Simulation/catkin_ws/devel/lib/send_velocity/: cmd
Simulation/catkin_ws/devel/lib/state_estimator/: ekf
Simulation/catkin_ws/devel/lib/talker/: talk
Simulation/catkin_ws/devel/lib/trajectory/: trajectory
Simulation/catkin_ws/devel/share/image_listener/cmake/: image_listenerConfig.cmake
Simulation/catkin_ws/devel/share/talker/cmake/: talkerConfig.cmake
Simulation/catkin_ws/devel/share/window_node/cmake/: window_node-msg-paths.cmake
Simulation/catkin_ws/src/bebop2_command_controller/: CMakeLists.txt  package.xml
Simulation/catkin_ws/src/bebop2_command_controller/include/: main.h
Simulation/catkin_ws/src/build-state_estimator-Desktop_Qt_5_7_0_GCC_64bit-Default/: CMakeCache.txt
Simulation/catkin_ws/src/build-state_estimator-Desktop_Qt_5_7_0_GCC_64bit-Default/catkin_generated/: setup_cached.sh
Simulation/catkin_ws/src/build-state_estimator-Desktop_Qt_5_7_0_GCC_64bit-Default/catkin_generated/installspace/: state_estimator.pc
Simulation/catkin_ws/src/build-state_estimator-Desktop_Qt_5_7_0_GCC_64bit-Default/devel/: .catkin  .rosinstall
Simulation/catkin_ws/src/build-state_estimator-Desktop_Qt_5_7_0_GCC_64bit-Default/gtest/: CTestTestfile.cmake  cmake_install.cmake
Simulation/catkin_ws/src/build-state_estimator-Desktop_Qt_5_7_0_GCC_64bit-Default/gtest/gtest/: Makefile  gtest.cbp
Simulation/catkin_ws/src/image_listener/: main.cpp
Simulation/catkin_ws/src/ptp_motion_switching_controller/include/: DFL.h
Simulation/catkin_ws/src/ptp_motion_switching_controller/src/: DFL.cpp
Simulation/catkin_ws/src/state_estimator/include/: state_estimator.h
Simulation/catkin_ws/src/state_estimator/src/: state_estimator.cpp
Simulation/catkin_ws/src/trajectory/: CMakeLists.txt
Simulation/catkin_ws/src/window_node/: CMakeLists.txt  package.xml
Simulation/catkin_ws/src/window_node/include/: detectwindow.h
Simulation/catkin_ws/src/window_node/msg/: WinSetMsg.msg
Simulation/catkin_ws/state_estimator/: package.xml
Simulation/catkin_ws/state_estimator/src/: main.cpp  state_estimator.cpp
backup/: sphinx.sh
backup/Astar/: Astar.pro  astar.cpp  astar.h
backup/Dijkstra/: Dijkstra.pro  main.cpp
backup/MDP/: MDP.pro  mdp.cpp  mdp.h
backup/MarkovDP/: MarkovDP.pro  main.cpp  mdp.cpp  mdp.h
backup/MonteCarlo/: MonteCarlo.pro  main.cpp  montecarlo.cpp  montecarlo.h
backup/RRT/: mainwindow.ui
backup/catkin_ws/devel/: .catkin  .rosinstall
backup/catkin_ws/devel/include/state_estimator/: Ardrone3PilotingStateSpeedChanged.h
backup/catkin_ws/devel/include/window_node/: WinSetMsg.h
backup/catkin_ws/devel/lib/image_listener/: listen
backup/catkin_ws/devel/lib/pkgconfig/: ptp_motion_switching_controller.pc  window_node.pc
backup/catkin_ws/devel/lib/ptp_motion_switching_controller/: switching_controller
backup/catkin_ws/devel/lib/state_estimator/: ekf
backup/catkin_ws/devel/lib/window_node/: window
backup/catkin_ws/devel/share/aruco_generator/cmake/: aruco_generatorConfig.cmake
backup/catkin_ws/devel/share/bebop2_command_controller/cmake/: bebop2_command_controllerConfig.cmake
backup/catkin_ws/devel/share/camera_publisher/cmake/: camera_publisherConfig.cmake
backup/catkin_ws/devel/share/ptp_motion_switching_controller/cmake/: ptp_motion_switching_controllerConfig.cmake
backup/catkin_ws/devel/share/send_velocity/cmake/: send_velocityConfig.cmake
backup/catkin_ws/src/aruco_generator/: CMakeLists.txt  main.cpp
backup/catkin_ws/src/bebop2_command_controller/include/: ihm.h
backup/catkin_ws/src/bebop2_command_controller/src/: ihm.cpp  main.cpp
backup/catkin_ws/src/build-state_estimator-Desktop_Qt_5_7_0_GCC_64bit-Default/: CTestTestfile.cmake  Makefile  cmake_install.cmake  state_estimator.cbp
backup/catkin_ws/src/build-state_estimator-Desktop_Qt_5_7_0_GCC_64bit-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
backup/catkin_ws/src/build-state_estimator-Desktop_Qt_5_7_0_GCC_64bit-Default/devel/: setup.sh
backup/catkin_ws/src/build-state_estimator-Desktop_Qt_5_7_0_GCC_64bit-Default/gtest/: Makefile  gmock.cbp
backup/catkin_ws/src/build-state_estimator-Desktop_Qt_5_7_0_GCC_64bit-Default/include/: moc_state_estimator.cxx_parameters
backup/catkin_ws/src/image_listener/: CMakeLists.txt  main.cpp
backup/catkin_ws/src/ptp_motion_switching_controller/: CMakeLists.txt
backup/catkin_ws/src/ptp_motion_switching_controller/include/: DFL.h
backup/catkin_ws/src/ptp_motion_switching_controller/src/: DFL.cpp  main.cpp
backup/catkin_ws/src/send_velocity/: CMakeLists.txt  main.cpp
backup/catkin_ws/src/state_estimator/: CMakeLists.txt
backup/catkin_ws/src/state_estimator/include/: state_estimator.h
backup/catkin_ws/src/state_estimator/src/: main.cpp  state_estimator.cpp
backup/catkin_ws/src/trajectory/: package.xml
backup/catkin_ws/src/trajectory/include/: trajectory.h
backup/catkin_ws/src/trajectory/src/: main.cpp  trajectory.cpp
backup/catkin_ws/src/window_node/msg/: WinDetMsg.msg
backup/catkin_ws/src/window_node/src/: detectwindow.cpp  main.cpp
backup/catkin_ws/state_estimator/include/: state_estimator.h
(+42 files in other folders)
